# Accompli

./: .env.example  .eslintrc.js  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.github/: copilot-instructions.md
.turbo/daemon/: e906b99db5a1c63b-turbo.log.2025-08-12  e906b99db5a1c63b-turbo.log.2025-08-13  e906b99db5a1c63b-turbo.log.2025-08-14  e906b99db5a1c63b-turbo.log.2025-08-15  e906b99db5a1c63b-turbo.log.2025-08-17
apps/mobile/: app.json  package.json
apps/web/: .env.production  Dockerfile  Dockerfile.dev  next.config.mjs  package.json  vercel.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: add-student-dialog.tsx  ai-assistant.tsx  behavior-analyzer.tsx  changelog-modal.tsx  iep-aware-ai-assistant.tsx  iep-goal-generator.tsx  research-aware-ai-assistant.tsx  simple-research-chatbot.tsx
apps/web/src/lib/: ai-service.ts  auth-store.ts  enhanced-ai-service.ts  iep-data-service.ts  research-knowledge-service.ts  student-storage.ts  use-require-auth.ts  user-storage.ts
docs/: architecture.md  iep-training-analysis.py  research-aware-ai-implementation.md
services/api/: Dockerfile  README.md  init_db.py  pyproject.toml  start_server.py
services/api/app/: database.py  main.py
services/api/app/core/: auth.py  config.py  logging.py
services/api/app/models/: __init__.py  base.py  behavior_event.py  evidence.py  iep.py  lesson_plan.py  organization.py  student.py  user.py
services/api/app/routers/: analytics.py  auth.py  behavior_events.py  evidence.py  goals.py  iep.py  lesson_plans.py  reports.py  students.py
(+27 files in other folders)
